fixed Electrical Engineer section link

--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
 <p>Since 12/22,  <strong>IT</strong> Support &amp; <strong>Fullstack</strong></p>
 <p>7/20 - 3/21, <strong>Fullstack</strong> developer by <em>SensProtect GmbH.</em>, <strong>Munich</strong></p>
 <p>1/20 - 4/20, <strong>Backend</strong> developer by <em>Pionierkraft GmbH.</em>, <strong>Munich</strong></p>
-<p>Electrical Eng. positions summarized <a href="#electrical-engineering-jobs">here</a>.</p>
+<p>Electrical Engineer positions summarized <a href="#-electrical-engineer">here</a>.</p>
 <h3 id="-studies">🎓 Studies</h3>
 <p>Since 11/25, <strong>Artificial Intelligence</strong> master</p>
 <ul>
