fix typo in projects.md

--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,7 @@
 <li>Easy to follow and customize.</li>
 <li>In less than 10 minutes.</li>
 <li>With most popular plugins.</li>
-<li>And demo-videos to teaching how to use the debugger:</li>
+<li>And demo-videos teaching how to use the debugger:</li>
 </ul>
 </li>
 </ul>
