fix av. to avg.
Short for average

--- a/public/index.html
+++ b/public/index.html
@@ -295,7 +295,7 @@
 <p><strong>Data Science</strong> master</p>
 <ul>
 <li><a href="https://www-uoc-edu.translate.goog/es/estudios/masters/master-universitario-data-science?_x_tr_sl=auto&amp;_x_tr_tl=en&amp;_x_tr_hl=es&amp;_x_tr_pto=wapp">Content</a></li>
-<li><a href="https://github.com/juanMarinero/CV/blob/master/UOC_ENG_certificate_doc_id_583261_idx_86997.pdf">Transcript of Records</a>, av. mark <strong>8.6</strong>/10</li>
+<li><a href="https://github.com/juanMarinero/CV/blob/master/UOC_ENG_certificate_doc_id_583261_idx_86997.pdf">Transcript of Records</a>, avg. mark <strong>8.6</strong>/10</li>
 </ul>
 <p>Electrical Engineer</p>
 <ul>
