feat(blogs/color_picker): add descriptive steps screenshot

--- a/public/blogs/color_picker/index.html
+++ b/public/blogs/color_picker/index.html
@@ -160,6 +160,18 @@ Quickstart Showcasting, specially the color picker Zenity is usually pre-install
 <li>Display the terminal <strong>color preview</strong></li>
 <li>Get a list of <strong>standard color names</strong> (e.g. <em>Cornflower Blue</em>, <em>Crimson</em>) that are visually close</li>
 </ul>
+
+
+<div class="html-content">
+  <img
+    src="/images/blogs/color_picker/color_picker_and_pastel_with_notes.png"
+    alt="ExerciseValidationWorkflow"
+    style="width:90%;"
+    alt="color_picker_and_pastel_with_notes.png"
+    >
+</div>
+
+
 <p>For all these we just need next <strong>two tools</strong> and a little of shell <strong>script</strong>ing.</p>
 <h4 id="zenity">Zenity</h4>
 <p><a href="https://gitlab.gnome.org/GNOME/zenity">Zenity</a> enables you to create the following types of simple dialog: calendar, notification icon, color selection,&hellip;</p>
