fix(projects/vim): vim-plugins-screenshots :RG GIF link
Expose non public links is bad practice!

--- a/public/index.html
+++ b/public/index.html
@@ -505,7 +505,7 @@
 <div class="html-content">
    <!-- with `:RG` of [fzf.vim](https://github.com/junegunn/fzf.vim) and `:cnext`/`:cprevious`) -->
   <img
-    src="https://raw.githubusercontent.com/juanMarinero/vim-plugins-screenshots/refs/heads/main/media/ferret/fzf.vim_alternative.gif?token=GHSAT0AAAAAAC6SYSVP2LGVBDFAM2XHKUDW2D5KBHQ"
+    src="https://raw.githubusercontent.com/juanMarinero/vim-plugins-screenshots/refs/heads/main/media/ferret/fzf.vim_alternative.gif"
     alt="fzf.vim_alternative"
     style="width:50%;"
     >
