feat(blogs/nerd_fonts_and_more): mayor style feats

--- a/public/de/404.html
+++ b/public/de/404.html
@@ -53,7 +53,7 @@
 
 
 
-<link rel="stylesheet" href="/css/style.min.acfb11d1ee359d76dadef3e47b511d19cc09eb0e9867262ef74f0b6ca337f7cc.css" type="text/css" integrity="sha256-rPsR0e41nXba3vPke1EdGcwJ6w6YZyYu908LbKM398w=" />
+<link rel="stylesheet" href="/css/style.min.2fdaf308e74c57b107874b6329c422e34f131bb696dcfcc44989e7dc1aa6e497.css" type="text/css" integrity="sha256-L9rzCOdMV7EHh0tjKcQi408TG7aW3PzESYnn3Bqm5Jc=" />
 
 <meta property="og:url" content="http://localhost:1313/de/404.html">
   <meta property="og:site_name" content="J. Marinero - Datenwissenschaftler & KI-Ingenieur">
@@ -115,6 +115,34 @@
   width: 100%; 
   display: block;
 }
+ 
+.circular-bg {
+  background-color: #6D9DBF;
+  clip-path: circle(50% at 50% 50%);  
+  aspect-ratio: 1;  
+  display: block;  
+  margin: 0 auto;  
+}
+
+ 
+ 
+ 
+.no-underline-except-hover {
+  text-decoration: none;     
+  line-height: 2.2em;  
+}
+.no-underline-except-hover:hover {
+  text-decoration: underline;   
+}
+
+ 
+.great-vibes {
+  font-family: "Great Vibes", cursive;
+}
+h1 {
+  font-family: "Great Vibes", "Open Sans", sans-serif;
+  font-size: 5.5rem;
+}
 </style>
 
 
@@ -128,6 +156,20 @@
 
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
 
+
+
+
+
+
+
+  <style>@font-face {
+  font-family: 'Great Vibes';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/greatvibes/v20/RWmMoKWR9v4ksMfaWd_JN-XC.ttf) format('truetype');
+}
+</style>
 
 
 </head>
