--- a/public/blogs/nerd_fonts_and_more/index.html
+++ b/public/blogs/nerd_fonts_and_more/index.html
@@ -79,7 +79,7 @@ Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add t
   <meta itemprop="description" content="Next fonts look great. Follow this guide to install them globally and even in your Hugo website.
 Global Nerd Fonts Install steps:
 Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add the code below to your ~/.bashrc Preview fonts here Install the selected, e.g. nerd_fonts_install &#34;Iosevka&#34; for the Iosevka font Use the picked font in programs like LibreOffice! nerd_fonts_install() { # Install Nerd Fonts from release archives # Example usage: nerd_fonts_install &#34;Iosevka&#34; # Default font: JetBrainsMono # Check if any argument was supplied or use default font local font_to_install=&#34;${1:-JetBrainsMono}&#34; # Download files/dirs and fonts directory local DOWNLOAD_DIR=$HOME/Downloads local FONT_FILE=&#34;$DOWNLOAD_DIR/$font_to_install.tar.xz&#34; local TEMP_EXTRACT_DIR=&#34;$DOWNLOAD_DIR/${font_to_install}_nerd_fonts_temp&#34; local FONT_DIR=$HOME/.local/share/fonts # Check if the font files already exist in the font directory if [ -d &#34;$FONT_DIR&#34; ] &amp;&amp; [ -n &#34;$(find &#34;$FONT_DIR&#34; -name &#34;*$font_to_install*&#34; -print -quit)&#34; ]; then echo &#34;$font_to_install fonts are already installed.&#34; return 0 fi # Download if needed if [ ! -f &#34;$FONT_FILE&#34; ]; then echo &#34;Downloading $font_to_install fonts...&#34; if ! curl -L &#34;https://github.com/ryanoasis/nerd-fonts/releases/latest/download/$font_to_install.tar.xz&#34; -o &#34;$FONT_FILE&#34;; then echo &#34;Error: Failed to download font&#34; &gt;&amp;2 return 1 fi else echo &#34;$FONT_FILE already exists.&#34; fi # Create and extract to temp directory mkdir -p &#34;$TEMP_EXTRACT_DIR&#34; echo &#34;Extracting fonts to temporary directory...&#34; if ! tar -xvf &#34;$FONT_FILE&#34; -C &#34;$TEMP_EXTRACT_DIR&#34;; then echo &#34;Error: Failed to extract archive&#34; &gt;&amp;2 rm -rf &#34;$TEMP_EXTRACT_DIR&#34; return 1 fi # Install mkdir -p &#34;$FONT_DIR&#34; find &#34;$TEMP_EXTRACT_DIR&#34; -type f \ \( -iname &#34;*$font_to_install*.ttf&#34; -o -iname &#34;*$font_to_install*.otf&#34; \) \ -exec mv -n {} &#34;$FONT_DIR/&#34; \; # Cleanup rm -f &#34;$FONT_FILE&#34; rm -rf &#34;$TEMP_EXTRACT_DIR&#34; # Update the font cache echo &#34;Updating font cache...&#34; fc-cache -f -v # Verify installation echo &#34;Verifying installation...&#34; fc-list | grep &#34;$font_to_install&#34; echo -e &#34;\nSuccessfully installed $font_to_install Nerd Font&#34; } The function structure is:">
-  <meta itemprop="wordCount" content="1106">
+  <meta itemprop="wordCount" content="1142">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -366,6 +366,27 @@ Though this is not about CSS code, but about different approachs to add fonts to
 </div>
 
 
+<p>Furthermore,</p>
+<ul>
+<li>Visit <a href="https://gwfh.mranftl.com/fonts/">Google Web Fonts Helper</a> to preview Google Web Fonts</li>
+<li>&hellip;and even to download the fonts you need. This approach is explained later in section <a href="/blogs/nerd_fonts_and_more/#iosevka-local-installed">Iosevka local installed</a></li>
+</ul>
+
+
+<div class="html-content">
+  <img
+    src="/images/blogs/nerd_fonts_and_more/google_web_fonts_helper__great_vibes.png"
+    style="width:90%;"
+    alt="color_picker_and_pastel_with_notes.png"
+    >
+</div>
+
+
+<p>Rememeber to</p>
+<ul>
+<li>Pick <code>Legacy Support</code></li>
+<li>Set under <code>Customize folder prefix</code> the dir <code>../webfonts/</code></li>
+</ul>
 <h3 id="oswald">Oswald</h3>
 <p>Actually there was no need to install any font if a pre-installed was enough, check <a href="https://github.com/zjedi/hugo-scroll/tree/master/static/webfonts">static/webfonts</a>.
 Example use of the <em>Oswald</em> font directly via <strong>CSS inline</strong>, instead of defining a <em>CSS class selector</em>, is:</p>
@@ -427,7 +448,7 @@ E.g.</p>
 
 <p>If you don&rsquo;t trust me, I like your scepticism btw., then inspect it with your favority web-dev tool to check the font used.</p>
 <h3 id="iosevka-local-installed">Iosevka local installed</h3>
-<p>One must install this too font. Now we will <strong>install</strong> the font <strong>local</strong>ly, instead of providing a link as done with <em>Great Vibes</em>. Steps:</p>
+<p>Now we will <strong>install</strong> the font <strong>local</strong>ly, instead of providing a link as done with <a href="/blogs/nerd_fonts_and_more/#great-vibes">Great Vibes</a>. Steps:</p>
 <ol>
 <li>Go to <a href="https://github.com/be5invis/Iosevka/releases/latest">Iosevka releases</a> and download for example <a href="https://github.com/be5invis/Iosevka/releases/download/v33.2.7/PkgWebFont-Iosevka-33.2.7.zip">PkgWebFont-Iosevka-33.2.7.zip</a></li>
 <li>Unzip the <code>.zip</code> file</li>
