--- a/public/blogs/nerd_fonts_and_more/index.html
+++ b/public/blogs/nerd_fonts_and_more/index.html
@@ -79,7 +79,7 @@ Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add t
   <meta itemprop="description" content="Next fonts look great. Follow this guide to install them globally and even in your Hugo website.
 Global Nerd Fonts Install steps:
 Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add the code below to your ~/.bashrc Preview fonts here Install the selected, e.g. nerd_fonts_install &#34;Iosevka&#34; for the Iosevka font Use the picked font in programs like LibreOffice! nerd_fonts_install() { # Install Nerd Fonts from release archives # Example usage: nerd_fonts_install &#34;Iosevka&#34; # Default font: JetBrainsMono # Check if any argument was supplied or use default font local font_to_install=&#34;${1:-JetBrainsMono}&#34; # Download files/dirs and fonts directory local DOWNLOAD_DIR=$HOME/Downloads local FONT_FILE=&#34;$DOWNLOAD_DIR/$font_to_install.tar.xz&#34; local TEMP_EXTRACT_DIR=&#34;$DOWNLOAD_DIR/${font_to_install}_nerd_fonts_temp&#34; local FONT_DIR=$HOME/.local/share/fonts # Check if the font files already exist in the font directory if [ -d &#34;$FONT_DIR&#34; ] &amp;&amp; [ -n &#34;$(find &#34;$FONT_DIR&#34; -name &#34;*$font_to_install*&#34; -print -quit)&#34; ]; then echo &#34;$font_to_install fonts are already installed.&#34; return 0 fi # Download if needed if [ ! -f &#34;$FONT_FILE&#34; ]; then echo &#34;Downloading $font_to_install fonts...&#34; if ! curl -L &#34;https://github.com/ryanoasis/nerd-fonts/releases/latest/download/$font_to_install.tar.xz&#34; -o &#34;$FONT_FILE&#34;; then echo &#34;Error: Failed to download font&#34; &gt;&amp;2 return 1 fi else echo &#34;$FONT_FILE already exists.&#34; fi # Create and extract to temp directory mkdir -p &#34;$TEMP_EXTRACT_DIR&#34; echo &#34;Extracting fonts to temporary directory...&#34; if ! tar -xvf &#34;$FONT_FILE&#34; -C &#34;$TEMP_EXTRACT_DIR&#34;; then echo &#34;Error: Failed to extract archive&#34; &gt;&amp;2 rm -rf &#34;$TEMP_EXTRACT_DIR&#34; return 1 fi # Install mkdir -p &#34;$FONT_DIR&#34; find &#34;$TEMP_EXTRACT_DIR&#34; -type f \ \( -iname &#34;*$font_to_install*.ttf&#34; -o -iname &#34;*$font_to_install*.otf&#34; \) \ -exec mv -n {} &#34;$FONT_DIR/&#34; \; # Cleanup rm -f &#34;$FONT_FILE&#34; rm -rf &#34;$TEMP_EXTRACT_DIR&#34; # Update the font cache echo &#34;Updating font cache...&#34; fc-cache -f -v # Verify installation echo &#34;Verifying installation...&#34; fc-list | grep &#34;$font_to_install&#34; echo -e &#34;\nSuccessfully installed $font_to_install Nerd Font&#34; } The function structure is:">
-  <meta itemprop="wordCount" content="1142">
+  <meta itemprop="wordCount" content="1186">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -363,6 +363,29 @@ Though this is not about CSS code, but about different approachs to add fonts to
  &#60;span class="great-vibes" style="font-size: 1.5em;"&#62;This line is written with Great Vibes font! It looks awesome, doesn't it? 0123456789 qwertyuiopasdfghjklzxcvbnm&#60;/span&#62;
 &#60;/div&#62;
 &#123;&#123;&#60; /rawhtml &#62;&#125;&#125;</code></pre>
+</div>
+
+
+<p>Where did I get that <code>googleapis</code> link from? I give credit to this <a href="https://bootstrap.hugoblox.com/getting-started/customization/#custom-theme">guide</a>. Summary adding screenshots:</p>
+<ul>
+<li>Visit <a href="https://fonts.google.com/">Google Fonts</a>, select a font</li>
+<li>Click on <code>Get Font</code> (upper right)</li>
+<li>Click on <code>&lt; &gt; Get embed code</code></li>
+<li>Copy the <code>href</code> URL of the third <code>&lt;link&gt;</code></li>
+</ul>
+
+
+<div class="html-content">
+  <table class="data-table">
+    <tr>
+      <td class="data-cell image-cell">
+        <img src="/images/blogs/nerd_fonts_and_more/google_web_fonts__get_font.png" alt="google_web_fonts__get_font" class="table-image">
+      </td>
+      <td class="data-cell image-cell">
+        <img src="/images/blogs/nerd_fonts_and_more/google_web_fonts_get_embed_code.png" alt="google_web_fonts_get_embed_code" class="table-image">
+      </td>
+    </tr>
+  </table>
 </div>
 
 
