--- a/public/blogs/nerd_fonts_and_more/index.html
+++ b/public/blogs/nerd_fonts_and_more/index.html
@@ -82,7 +82,7 @@ Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add t
 Table of Contents
 Global Nerd Fonts More fonts Hugo-scroll Great Vibes Oswald Awesome Font Global installed fail Iosevka local installed Summary HTML-tag &lt;h1&gt; Beyond Hugo Scroll Global Nerd Fonts Install steps:
 Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add the code below to your ~/.bashrc Preview fonts here Install the selected, e.g. nerd_fonts_install &#34;Iosevka&#34; for the Iosevka font Use the picked font in programs like LibreOffice! nerd_fonts_install() { # Install Nerd Fonts from release archives # Example usage: nerd_fonts_install &#34;Iosevka&#34; # Default font: JetBrainsMono # Check if any argument was supplied or use default font local font_to_install=&#34;${1:-JetBrainsMono}&#34; # Download files/dirs and fonts directory local DOWNLOAD_DIR=$HOME/Downloads local FONT_FILE=&#34;$DOWNLOAD_DIR/$font_to_install.tar.xz&#34; local TEMP_EXTRACT_DIR=&#34;$DOWNLOAD_DIR/${font_to_install}_nerd_fonts_temp&#34; local FONT_DIR=$HOME/.local/share/fonts # Check if the font files already exist in the font directory if [ -d &#34;$FONT_DIR&#34; ] &amp;&amp; [ -n &#34;$(find &#34;$FONT_DIR&#34; -name &#34;*$font_to_install*&#34; -print -quit)&#34; ]; then echo &#34;$font_to_install fonts are already installed.&#34; return 0 fi # Download if needed if [ ! -f &#34;$FONT_FILE&#34; ]; then echo &#34;Downloading $font_to_install fonts...&#34; if ! curl -L &#34;https://github.com/ryanoasis/nerd-fonts/releases/latest/download/$font_to_install.tar.xz&#34; -o &#34;$FONT_FILE&#34;; then echo &#34;Error: Failed to download font&#34; &gt;&amp;2 return 1 fi else echo &#34;$FONT_FILE already exists.&#34; fi # Create and extract to temp directory mkdir -p &#34;$TEMP_EXTRACT_DIR&#34; echo &#34;Extracting fonts to temporary directory...&#34; if ! tar -xvf &#34;$FONT_FILE&#34; -C &#34;$TEMP_EXTRACT_DIR&#34;; then echo &#34;Error: Failed to extract archive&#34; &gt;&amp;2 rm -rf &#34;$TEMP_EXTRACT_DIR&#34; return 1 fi # Install mkdir -p &#34;$FONT_DIR&#34; find &#34;$TEMP_EXTRACT_DIR&#34; -type f \ \( -iname &#34;*$font_to_install*.ttf&#34; -o -iname &#34;*$font_to_install*.otf&#34; \) \ -exec mv -n {} &#34;$FONT_DIR/&#34; \; # Cleanup rm -f &#34;$FONT_FILE&#34; rm -rf &#34;$TEMP_EXTRACT_DIR&#34; # Update the font cache echo &#34;Updating font cache...&#34; fc-cache -f -v # Verify installation echo &#34;Verifying installation...&#34; fc-list | grep &#34;$font_to_install&#34; echo -e &#34;\nSuccessfully installed $font_to_install Nerd Font&#34; } The function structure is:">
-  <meta itemprop="wordCount" content="1247">
+  <meta itemprop="wordCount" content="1292">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -329,7 +329,18 @@ Though <strong>propetary</strong> fonts are <strong>not</strong> included.</p>
 </span></span><span style="display:flex;"><span>fc-cache -fv  <span style="color:#75715e"># Refresh font cache</span>
 </span></span></code></pre></div><h2 id="hugo-scroll">Hugo-scroll</h2>
 <p>First of all take a look at my guide about how to deploy your own <em>Hugo Scroll</em> site <a href="/blogs/create_hugo_website/">here</a>.
-The <em>CSS</em> section is the one you need read, <a href="https://github.com/juanMarinero/juanmarinero.github.io#css">this</a>.</p>
+The <em>CSS</em> section is the one you need read.</p>
+<p>The <em>Hugo Scroll</em> theme have a modest documentation:</p>
+<ul>
+<li>Its <a href="https://github.com/zjedi/hugo-scroll/blob/master/README.md">README</a></li>
+<li>Its <a href="https://github.com/zjedi/hugo-scroll/issues">issues</a></li>
+<li>And of course the general <a href="https://gohugo.io/documentation/">Hugo docs</a>, since not everything is theme-specific</li>
+</ul>
+<p>Concerning fonts, basically:</p>
+<ul>
+<li><a href="https://github.com/zjedi/hugo-scroll#customizing-css">How to customize CSS</a></li>
+<li>And this <a href="https://github.com/zjedi/hugo-scroll/pull/48">PR</a> about how to local install fonts, later explained in the <a href="/blogs/nerd_fonts_and_more/#iosevka-local-installed">Iosevka</a> section</li>
+</ul>
 <p>Let&rsquo;s first apply the font to a HTML-class, then multiple times inline, and finally to a HTML-tag, like <code>&lt;h1&gt;</code>.
 Though this is not about CSS code, but about different approachs to add fonts to your Hugo website.</p>
 <h3 id="great-vibes">Great Vibes</h3>
