fix(homepage/credits): fix link to blogs/create_hugo_website

--- a/public/index.html
+++ b/public/index.html
@@ -668,7 +668,7 @@ h1 {
 <li><a href="https://www.flaticon.com/free-icons/computer" target="_blank"><i class="fa fa-external-link"></i> Computer icons created by vectorsmarket15 - Flaticon</a>
 </li>
 </ul>
-<p>Do you want to create <strong>your own website</strong> like this one? Then check my <a href="https://github.com/juanMarinero/juanmarinero.github.io/blob/main/README.md">quick guide</a>!</p>
+<p>Do you want to create <strong>your own website</strong> like this one? Then check my <a href="https://juanmarinero.github.io/blogs/create_hugo_website">quick guide</a>!</p>
 
                 </section>
             </article>
