--- a/public/blogs/nerd_fonts_and_more/index.html
+++ b/public/blogs/nerd_fonts_and_more/index.html
@@ -53,7 +53,7 @@
 
 
 
-<link rel="stylesheet" href="/css/style.min.2fdaf308e74c57b107874b6329c422e34f131bb696dcfcc44989e7dc1aa6e497.css" type="text/css" integrity="sha256-L9rzCOdMV7EHh0tjKcQi408TG7aW3PzESYnn3Bqm5Jc=" />
+<link rel="stylesheet" href="/css/style.min.5225559b588c6dd9e2575685da1d0d3c6d059652c9b6dae2b54d59a14ad811ce.css" type="text/css" integrity="sha256-UiVVm1iMbdniV1aF2h0NPG0FllLJttritU1ZoUrYEc4=" />
 
 <meta property="og:url" content="http://localhost:1313/blogs/nerd_fonts_and_more/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
@@ -153,6 +153,9 @@ Install Nerd Fonts dependencies: sudo apt-get install -y ruby-dev gcc make Add t
 h1 {
   font-family: "Great Vibes", "Open Sans", sans-serif;
   font-size: 5.5rem;
+}
+.font-middle-earth-joanna-vu {
+  font-family: "MiddleEarth JoannaVu", "Great Vibes", "Open Sans", sans-serif
 }
 </style>
 
