--- a/public/blogs_index/index.html
+++ b/public/blogs_index/index.html
@@ -53,13 +53,13 @@
 
 
 
-<link rel="stylesheet" href="/css/style.min.2fdaf308e74c57b107874b6329c422e34f131bb696dcfcc44989e7dc1aa6e497.css" type="text/css" integrity="sha256-L9rzCOdMV7EHh0tjKcQi408TG7aW3PzESYnn3Bqm5Jc=" />
+<link rel="stylesheet" href="/css/style.min.5225559b588c6dd9e2575685da1d0d3c6d059652c9b6dae2b54d59a14ad811ce.css" type="text/css" integrity="sha256-UiVVm1iMbdniV1aF2h0NPG0FllLJttritU1ZoUrYEc4=" />
 
 <meta property="og:url" content="http://localhost:1313/blogs_index/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="JM - 💭 Blogs">
   <meta property="og:description" content="Coding, travel, hobbies, books and more…
-&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website">
+&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more!">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="http://localhost:1313/images/cover-image.jpg">
@@ -69,13 +69,13 @@
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="JM - 💭 Blogs">
   <meta name="twitter:description" content="Coding, travel, hobbies, books and more…
-&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website">
+&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more!">
 
 
   <meta itemprop="name" content="JM - 💭 Blogs">
   <meta itemprop="description" content="Coding, travel, hobbies, books and more…
-&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website">
-  <meta itemprop="wordCount" content="28">
+&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more!">
+  <meta itemprop="wordCount" content="36">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -147,6 +147,9 @@ h1 {
   font-family: "Great Vibes", "Open Sans", sans-serif;
   font-size: 5.5rem;
 }
+.font-middle-earth-joanna-vu {
+  font-family: "MiddleEarth JoannaVu", "Great Vibes", "Open Sans", sans-serif
+}
 </style>
 
 
@@ -205,6 +208,19 @@ h1 {
   <br>
   <a href="/blogs/create_hugo_website/" class="no-underline-except-hover">
   How to <strong>create</strong> a <strong>Hugo-scroll web</strong>site</a>
+  <br>
+  <br>
+</div>
+
+
+<h3 id="-books">📚 Books</h3>
+
+
+<div class="html-content">
+  <br>
+  <a href="/blogs/tolkien/" class="no-underline-except-hover">
+  <span style="font-family: 'MiddleEarth JoannaVu', cursive; font-size: 3.1rem;">Tolkien</span>:
+  books, podcasts and much more!
 </div>
 
 
