fix(blogs/tolkien): introducction meme line and picture
Suits better for cellphone display

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1458">
+  <meta itemprop="wordCount" content="1463">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -221,19 +221,6 @@ Do you hold [Christian] values—such as holding your oath or the sacred bond of
 
 
 <p>In this <strong>quick post</strong> I&rsquo;m sure you will discover a book, podcast, film or even a video game that will make you fall deeper in <strong>love</strong> with <strong>Tolkien&rsquo;s world</strong>.</p>
-
-
-<div class="html-content">
-  <a href="https://www.tumblr.com/omghotmemes/643881678908129280/lady-galadriels-gifts">
-    <img
-      src="https://64.media.tumblr.com/9fa0942567bb06930d8f76bf654177ff/67a9bbac35837998-50/s640x960/10b327b5b73a1df2d553979555d8229c67704551.jpg"
-      alt="lotr meme - Galadriel does not gift stick to Sam"
-      style="float:right; width:35%; border-radius: 15%;"
-      >
-  </a>
-</div>
-
-
 <p>Contents:</p>
 <ul>
 <li><a href="/blogs/tolkien/#books">Books</a></li>
@@ -247,7 +234,20 @@ Do you hold [Christian] values—such as holding your oath or the sacred bond of
 <li><a href="/blogs/tolkien/#miscellaneous">Miscellaneous</a></li>
 <li><a href="/blogs/tolkien/#bonus-tolkien-fonts">Bonus. Tolkien fonts</a></li>
 </ul>
-<p>Even memes! I will show my [poor] humor taste hehe.</p>
+<p>I&rsquo;ll even share some memes - though they may be more Orc-work than Elven craft!</p>
+
+
+<div class="html-content">
+  <a href="https://www.tumblr.com/omghotmemes/643881678908129280/lady-galadriels-gifts">
+    <img
+      src="https://64.media.tumblr.com/9fa0942567bb06930d8f76bf654177ff/67a9bbac35837998-50/s640x960/10b327b5b73a1df2d553979555d8229c67704551.jpg"
+      alt="lotr meme - Galadriel does not gift stick to Sam"
+      style="width:50%; border-radius: 15%;"
+      >
+  </a>
+</div>
+
+
 <h2 id="books">Books</h2>
 <p>For new readers, let&rsquo;s find out if this suits your taste.</p>
 <p>Give a try to the children&rsquo;s book <strong><a href="https://en.wikipedia.org/wiki/The_Hobbit">The Hobbit</a></strong>.
