fix(blogs/tolkien): hiddenExtra img and add Farewell h2
Image was too small for cellphone display
Also minor text re-words

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1463">
+  <meta itemprop="wordCount" content="1457">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -523,8 +523,8 @@ shall <em>restore light to forgotten glories</em> in years to come.</p>
 
 
 <h2 id="hidden-extra">Hidden extra</h2>
-<p>Did you read this far my fellow friend? You have earned a <em>precious</em> treasure!
-Have fun with the last meme!</p>
+<p>Did you read this far my fellow friend? You have earned a <em>precious</em> treasure,
+the last meme!</p>
 
 
 <div class="html-content">
@@ -532,13 +532,15 @@ Have fun with the last meme!</p>
     <img
     src="https://preview.redd.it/hush-now-v0-iv5oibgfb7re1.png?width=320&crop=smart&auto=webp&s=98dc5c7d0e8f58ba7529f7b44257ea12104df989"
     alt="group chat meme lord of the rings saruman. "
-     style="float:center; width:50%;"
+    style="float:center; width:70%; border-radius: 15%;"
     >
   </a>
+  <br>
 </div>
 
 
-<p>Finally, before we say farewell, let us warmly thank Christopher Tolkien and Professor Tolkien for creating this magical world.</p>
+<h2 id="farewell">Farewell</h2>
+<p>Finally, let us warmly thank Christopher Tolkien and Professor Tolkien for creating this magical world.</p>
 
 
 <div class="html-content">
