--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1457">
+  <meta itemprop="wordCount" content="1455">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -435,11 +435,12 @@ called <strong><a href="https://bfmereforged.org/">BFME: Reforged</a></strong> a
 shall <em>restore light to forgotten glories</em> in years to come.</p>
 <h2 id="miscellaneous">Miscellaneous</h2>
 <p>As mithril threads through mountain stone, Tolkien&rsquo;s world gleams in unexpected places, these are some:</p>
-<ul>
-<li><strong>Artwork</strong> and Illustrations. Including original Tolkien artwork, fan art, and official illustrations.</li>
-<li><strong>Maps</strong> and Geography. Exploring the detailed maps of Middle Earth and discussions about the geography, regions, and journeys in Tolkien&rsquo;s lore.</li>
-<li><strong>Languages</strong> and Linguistics. Delving into Professor Tolkien&rsquo;s constructed languages like Quenya and Sindarin, with resources for even learning them.</li>
-</ul>
+<h3 id="artwork">Artwork</h3>
+<p>Including original Tolkien artwork, fan art, and official illustrations.</p>
+<h3 id="maps--geography">Maps &amp; Geography</h3>
+<p>Exploring the detailed maps of Middle Earth and discussions about the geography, regions, and journeys in Tolkien&rsquo;s lore.</p>
+<h3 id="languages--linguistics">Languages &amp; Linguistics</h3>
+<p>Delving into Professor Tolkien&rsquo;s constructed languages like Quenya and Sindarin, with resources for even learning them.</p>
 <h2 id="bonus-tolkien-fonts">Bonus. Tolkien fonts</h2>
 
 
