feat(blogs/tolkien): add links to [interactive] maps

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1455">
+  <meta itemprop="wordCount" content="1494">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -439,6 +439,15 @@ shall <em>restore light to forgotten glories</em> in years to come.</p>
 <p>Including original Tolkien artwork, fan art, and official illustrations.</p>
 <h3 id="maps--geography">Maps &amp; Geography</h3>
 <p>Exploring the detailed maps of Middle Earth and discussions about the geography, regions, and journeys in Tolkien&rsquo;s lore.</p>
+<p>Journey with the Fellowship and Thorin&rsquo;s Company across
+<a href="http://lotrproject.com/map/">Middle-earth <strong>interactive map</strong></a> (or explore <a href="https://middleearthmap.app/">this alternative</a>)
+and <a href="http://lotrproject.com/map/beleriand/">Beleriand</a>.
+<a href="https://www.reddit.com/r/lotr/comments/1870r9/map_of_characters_paths_through_the_books_my/">E.g.</a></p>
+<p>Are you as satisfied as a Hobbit with a single bite of lembas?
+Then&hellip; Second breakfast is ready!
+<a href="https://en.wikipedia.org/wiki/Tolkien%27s_maps">Wikipedia</a>,
+<a href="https://lotr.fandom.com/wiki/Maps">lotr.fandom</a>,
+<a href="https://www.theonering.com/maps-of-middle-earth/">theonering.com</a>,&hellip;</p>
 <h3 id="languages--linguistics">Languages &amp; Linguistics</h3>
 <p>Delving into Professor Tolkien&rsquo;s constructed languages like Quenya and Sindarin, with resources for even learning them.</p>
 <h2 id="bonus-tolkien-fonts">Bonus. Tolkien fonts</h2>
