feat(blogs/tolkien): add famous illustrators

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1494">
+  <meta itemprop="wordCount" content="1543">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -437,6 +437,16 @@ shall <em>restore light to forgotten glories</em> in years to come.</p>
 <p>As mithril threads through mountain stone, Tolkien&rsquo;s world gleams in unexpected places, these are some:</p>
 <h3 id="artwork">Artwork</h3>
 <p>Including original Tolkien artwork, fan art, and official illustrations.</p>
+<p>The most famous artist associated with <a href="https://en.wikipedia.org/wiki/Illustrating_Middle-earth">Middle Earth illustrations</a>
+is widely regarded as <a href="https://en.wikipedia.org/wiki/Alan_Lee_%28illustrator%29">Alan Lee</a>.
+My first <em>lotr</em> book had his <a href="https://tolkiengateway.net/wiki/File:Alan_Lee_-_The_Black_Gate_is_Closed.jpg">this</a>
+as cover. More <a href="https://tolkiengateway.net/wiki/Category:Images_by_Alan_Lee">here</a>.</p>
+<p>Ted Nasmith <a href="https://www.tednasmith.com/site-map/j-r-r-tolkien/">illustrations</a> are also well-known.
+The <a href="https://www.tednasmith.com/videos/">interviews</a> are also worth listening to.</p>
+<p>Not to mention Tolkien&rsquo;s own artwork:
+<a href="https://en.wikipedia.org/wiki/Tolkien%27s_artwork">Wikipedia</a>,
+<a href="https://www.tolkienestate.com/painting/#illustration">tolkienestate.com</a>
+and <a href="https://tolkiengateway.net/wiki/Category:Images_by_J.R.R._Tolkien">tolkiengateway.net</a>.</p>
 <h3 id="maps--geography">Maps &amp; Geography</h3>
 <p>Exploring the detailed maps of Middle Earth and discussions about the geography, regions, and journeys in Tolkien&rsquo;s lore.</p>
 <p>Journey with the Fellowship and Thorin&rsquo;s Company across
