--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1543">
+  <meta itemprop="wordCount" content="1550">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -460,6 +460,7 @@ Then&hellip; Second breakfast is ready!
 <a href="https://www.theonering.com/maps-of-middle-earth/">theonering.com</a>,&hellip;</p>
 <h3 id="languages--linguistics">Languages &amp; Linguistics</h3>
 <p>Delving into Professor Tolkien&rsquo;s constructed languages like Quenya and Sindarin, with resources for even learning them.</p>
+<p>Let us not overlook Tolkien&rsquo;s elegant <a href="https://www.tolkienestate.com/painting/calligraphy/">calligraphy</a>.</p>
 <h2 id="bonus-tolkien-fonts">Bonus. Tolkien fonts</h2>
 
 
