feat(blogs/tolkien): update German audio-books
Also minor add to 'The Tolkien Society' section:
Deutschen Tolkien Gesellschaft e.V.

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1550">
+  <meta itemprop="wordCount" content="1645">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -288,20 +288,39 @@ I highlight the audio-book advise, the <em>Martin Shaw’s reading</em>; more ab
 more about this society in <a href="/blogs/tolkien/#the-tolkien-society">its section</a>.
 They may not be commercial hits, but they are worth reading.</p>
 <h2 id="audio-books">Audio books</h2>
+<h3 id="english">English</h3>
 <p><a href="https://www.youtube.com/watch?v=4uq6vlrfZPY">A <strong>Guide</strong> to Tolkien Audiobooks</a> by
 <a href="https://www.youtube.com/c/NerdoftheRings">Nerd of the Rings</a>.
 That&rsquo;s it. Those 12 minutes are gold!
 This recommends <em>enhanced</em> audio books too, like:</p>
 <ul>
-<li>The <a href="https://archive.org/details/roast-moose">Hobbit</a> by <a href="https://www.youtube.com/@Bluefax">Bluefax</a>, which is free! Also enjoy its <a href="https://www.youtube.com/watch?v=30yW7a9g0vs&amp;list=PLHuqOGq8HdsKf6OcP-cCD6_mOODvMf0aT">making-of</a>,</li>
+<li>The <a href="https://archive.org/details/roast-moose">Hobbit</a> by <a href="https://www.youtube.com/@Bluefax">Bluefax</a>, which is free! Also enjoy its <a href="https://www.youtube.com/watch?v=30yW7a9g0vs&amp;list=PLHuqOGq8HdsKf6OcP-cCD6_mOODvMf0aT">making-of</a></li>
 <li>The <a href="https://archive.org/details/the-fellowship-of-the-ring_soundscape-by-phil-dragash">lotr</a> by <a href="https://www.phildragash.com/index.html">Phil Dragash</a></li>
 </ul>
-<p><em>lotr</em> in <strong>German</strong>:</p>
+<h3 id="german">German</h3>
+<p>The Hobbit</p>
+<ul>
+<li>By <a href="https://m.youtube.com/playlist?list=PLQKCnps2Ck5gajKmVvx9I8yCmPYjiqnsF">Haskildor</a></li>
+<li>By <a href="https://m.youtube.com/watch?v=yxDXrf1pfLU&amp;list=PLfVz6qIR5LagD7g-vVz-_x2szJkfx4v5I">NatureCheck</a></li>
+<li>By <a href="https://www.ardapedia.org/wiki/Der_Hobbit_%28H%C3%B6rspiel%29">Westdeutschen Rundfunks (WDR)</a>: Teil <a href="https://m.youtube.com/watch?v=waOChlhT2Ek">1</a>, <a href="https://m.youtube.com/watch?v=4YgcTMebO2A">2</a>, <a href="https://m.youtube.com/watch?v=0MqX_Nm0OEk">3</a> und <a href="https://m.youtube.com/watch?v=E3rnI-KGpnc&amp;pp=0gcJCccJAYcqIYzv">4</a></li>
+<li>By <a href="https://www.youtube.com/watch?v=bjT5s54Cywg&amp;list=PLEt183gPetNA6wnM1no4hP9_QM5_5yGM8&amp;index=12">Barbara Netscher</a>. This is the most <em>gemütlich</em> version! Caution: playlist is unsorted.</li>
+</ul>
+<p>Der Herr der Ringe</p>
 <ul>
 <li>German readers have no legal free <a href="https://tolkiengateway.net/wiki/Margaret_Carroux">Margaret Carroux</a> <em>Hörbücher</em>, but if you have a deaf friend, then they can order a free version. <a href="https://www.reddit.com/r/buecher/comments/1gyvemr/comment/lysam6r">Info</a> and <a href="https://wbh-online.com/hoerbuecher/suchergebnisse/?suchbegriff=Herr&#43;der&#43;Ringe&#43;tolkien">provider</a>.</li>
-<li>Man can listen the commercial <a href="https://de.wikipedia.org/wiki/Gert_Heidenreich">Gert Heidenreich</a> ones. Search it. <a href="https://www.youtube.com/watch?v=HQsMPXnBt7s">Hörprobe</a>.</li>
+<li><em>Die Gefährten</em> by Achim Höppner, <a href="https://www.youtube.com/watch?v=9af5Ixofvlo">sample</a>.
+Rest of books by Gert Heidenreich, <a href="https://www.youtube.com/watch?v=HQsMPXnBt7s">Hörprobe</a></li>
 <li><a href="https://www.youtube.com/@Haskildor">Haskildor</a> free version <a href="https://www.youtube.com/watch?v=2hmv1y5Cr0I&amp;list=PLQKCnps2Ck5jGtVm6wAhMh358j0aiAL1h">here</a>!</li>
+<li>By <a href="https://www.youtube.com/watch?v=vwGRGq-6XdM&amp;list=PLpUlCfppce9dEPfwh1DLoO1tl2vugVW4R&amp;index=2">Storyline</a></li>
 </ul>
+<p>The Silmarillion</p>
+<ul>
+<li>By Achim Höppner there is a <a href="https://www.youtube.com/watch?v=11RqCIHYuog">sample</a>, though years ago it could be found via <a href="https://web.archive.org/web/20180701000000*/hoerspiele.cc">hoerspiele.cc</a></li>
+<li>By <a href="https://m.youtube.com/playlist?list=PLQKCnps2Ck5jXI3sktn2eG2V2mqhJ0tnh">Haskildor</a> under construction</li>
+<li>By <a href="https://www.youtube.com/watch?v=fyX7iYVCw34&amp;list=PLN8efo1rte2IBLQZXFiNDd9n6CO8zhqzQ&amp;index=42">Deutsche Tolkien Gesellschaft e.V.</a>, actually a podcast.
+They even share <a href="https://www.tolkiengesellschaft.de/44866/5-tipps-fuer-euch-wenn-ihr-das-silmarillion-lesen-moechtet/">tips</a> for reading!</li>
+</ul>
+<h3 id="create-your-own">Create your own</h3>
 <p>If you want to <strong>contribute</strong>, in any language, please share your reading recordings in <a href="https://librivox.org">LibriVox</a>.
 This platform holds many public domain audio books (and more).
 Though <a href="https://librivox.org/author/1536?primary_key=1536">Tolkien&rsquo;s works in LibriVox</a> are almost none.
@@ -377,6 +396,8 @@ Thus, I&rsquo;ll just say&hellip; the <strong><a href="https://en.wikipedia.org/
 <p>We are an educational charity and literary society devoted to the study and promotion of the life and works of the author and academic J.R.R. Tolkien.
 The Tolkien Society publishes a bulletin and a journal at regular intervals, and organises various events throughout the year.</p></blockquote>
 <p>Find your local branch <a href="https://www.tolkiensociety.org/society/smials/">here</a> and join!</p>
+<p><strong>German</strong> speakers visit <a href="https://www.tolkiengesellschaft.de/">Deutschen Tolkien Gesellschaft e.V.</a> bitteschön.
+Notice this is not an official <em>Smial</em> - these organizations are independent.</p>
 <h2 id="memes">Memes</h2>
 <p>Why not some fun? <em>Well yes,&hellip; and no</em>. I will just mention two platforms for brevity, the rest <em>shall not pass!</em></p>
 <ul>
