--- a/public/blogs_index/index.html
+++ b/public/blogs_index/index.html
@@ -59,7 +59,7 @@
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="JM - 💭 Blogs">
   <meta property="og:description" content="Coding, travel, hobbies, books and more…
-&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more!">
+&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="http://localhost:1313/images/cover-image.jpg">
@@ -69,13 +69,13 @@
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="JM - 💭 Blogs">
   <meta name="twitter:description" content="Coding, travel, hobbies, books and more…
-&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more!">
+&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
 
 
   <meta itemprop="name" content="JM - 💭 Blogs">
   <meta itemprop="description" content="Coding, travel, hobbies, books and more…
-&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more!">
-  <meta itemprop="wordCount" content="36">
+&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
+  <meta itemprop="wordCount" content="48">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -179,6 +179,20 @@ h1 {
 </style>
 
 
+
+<script>
+MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    displayMath: [['$$', '$$'], ['\\[', '\\]']]
+  },
+  svg: {
+    fontCache: 'global'
+  }
+};
+</script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
   <body>
   <main class="content page-template page-">
@@ -221,6 +235,18 @@ h1 {
   <a href="/blogs/tolkien/" class="no-underline-except-hover">
   <span style="font-family: 'MiddleEarth JoannaVu', cursive; font-size: 3.1rem;">Tolkien</span>:
   books, podcasts and much more!
+  <br>
+  <br>
+</div>
+
+
+<h3 id="-image-editing">🖼️ Image editing</h3>
+
+
+<div class="html-content">
+  <br>
+  <a href="/blogs/instagram_mosaic/" class="no-underline-except-hover">
+  How to create an <strong>Instagram mosaic</strong> on the terminal</a>
 </div>
 
 
