fix(blogs/latex_for_webdev): fill color in TikZ-nodes

--- a/public/license/index.html
+++ b/public/license/index.html
@@ -237,6 +237,10 @@ window.MathJax = {
 
 <link rel="stylesheet" type="text/css" href="http://tikzjax.com/v1/fonts.css">
 <script src="https://tikzjax.com/v1/tikzjax.js"></script>
+
+
+
+<script src="/js/tikzjax-node.min.cbe0ef1e642949b19f30ce720fa487d3f9fb3e76973d469c26bf5519b5974af4.js" integrity="sha256-y&#43;DvHmQpSbGfMM5yD6SH0/n7PnaXPUacJr9VGbWXSvQ=" defer></script>
 </head>
   <body>
   <main class="content page-template page-">
