--- a/public/blogs/instagram_mosaic/index.html
+++ b/public/blogs/instagram_mosaic/index.html
@@ -238,7 +238,7 @@ window.MathJax = {
 
 
 
-<script src="/js/tikzjax-node.min.cbe0ef1e642949b19f30ce720fa487d3f9fb3e76973d469c26bf5519b5974af4.js" integrity="sha256-y&#43;DvHmQpSbGfMM5yD6SH0/n7PnaXPUacJr9VGbWXSvQ=" defer></script>
+<script src="/js/tikzjax-node.min.6afeeccc9ab13d35b5a2f9abab368a4911dd1cb500cfa5bf7efee8016ee6406c.js" integrity="sha256-av7szJqxPTW1ovmrqzaKSRHdHLUAz6W/fv7oAW7mQGw=" defer></script>
 </head>
   <body>
   <main class="content page-template page-">
