--- a/public/de/404.html
+++ b/public/de/404.html
@@ -222,7 +222,7 @@ window.MathJax = {
 
 
 
-<link rel="stylesheet" type="text/css" href="http://tikzjax.com/v1/fonts.css">
+<link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
 <script src="https://tikzjax.com/v1/tikzjax.js"></script>
 
 
