--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -235,7 +235,7 @@ window.MathJax = {
 
 
 
-<script src="/js/tikzjax-node.min.6afeeccc9ab13d35b5a2f9abab368a4911dd1cb500cfa5bf7efee8016ee6406c.js" integrity="sha256-av7szJqxPTW1ovmrqzaKSRHdHLUAz6W/fv7oAW7mQGw=" defer></script>
+<script src="/js/tikzjax-node.min.679617c0048325b476a16f95d017ba0858e995ffdc938c4fa7f8b994e1e9d2a0.js" integrity="sha256-Z5YXwASDJbR2oW&#43;V0Be6CFjplf/ck4xPp/i5lOHp0qA=" defer></script>
 </head>
   <body>
   <main class="content page-template page-">
