--- a/public/blogs/latex_for_webdev/index.html
+++ b/public/blogs/latex_for_webdev/index.html
@@ -79,7 +79,7 @@ MathJax Support Block equations Error handling LaTeX packages Include extra pack
   <meta itemprop="description" content="$\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web developers $\LaTeX$ is a markup language for typesetting math and science. It’s used in web-dev because it’s a fast and easy way to typeset equations and other math content.
 Table of Contents
 MathJax Support Block equations Error handling LaTeX packages Include extra packages Test a LaTeX package TikZ Enable TikZ TikZJax issues MathJax Support Open a terminal. Go to your project directory: cd &lt;path&gt; Run $EDITOR layouts/partials/custom_head.html Append and save &lt;!-- MathJax Support --&gt; &lt;!-- https://docs.mathjax.org/en/latest/options/input/tex.html --&gt; &lt;script&gt; window.MathJax = { tex: { inlineMath: [[&#39;$&#39;, &#39;$&#39;], [&#39;\\(&#39;, &#39;\\)&#39;]], displayMath: [[&#39;$$&#39;, &#39;$$&#39;], [&#39;\\[&#39;, &#39;\\]&#39;]], processEscapes: true, processEnvironments: true, packages: {&#39;[&#43;]&#39;: [&#39;ams&#39;, &#39;boldsymbol&#39;]} // &#39;base&#39; &#43; extras }, options: { skipHtmlTags: [&#39;script&#39;, &#39;noscript&#39;, &#39;style&#39;, &#39;textarea&#39;, &#39;pre&#39;, &#39;code&#39;], ignoreHtmlClass: &#39;tex2jax_ignore&#39; }, loader: { load: [&#39;[tex]/ams&#39;, &#39;[tex]/boldsymbol&#39;] }, startup: { ready() { console.log(&#39;MathJax is initializing...&#39;); MathJax.startup.defaultReady(); MathJax.startup.promise.then(() =&gt; { console.log(&#39;MathJax typesetting complete&#39;); }).catch((err) =&gt; { console.error(&#39;MathJax failed:&#39;, err); }); } } }; &lt;/script&gt; &lt;!-- Only include polyfill if supporting older browsers --&gt; &lt;script src=&#34;https://cdn.jsdelivr.net/npm/core-js-bundle@3/minified.js&#34;&gt;&lt;/script&gt; &lt;!-- https://www.mathjax.org/#gettingstarted --&gt; &lt;script id=&#34;MathJax-script&#34; async src=&#34;https://cdn.jsdelivr.net/npm/mathjax@4.0.0/tex-mml-chtml.js&#34;&gt;&lt;/script&gt; Edit a markdown file, for example content/en/*.md Insert $\LaTeX$ code inline like $\sqrt{x^2 &#43; y^2} = r$ or in $$ blocks. Save Build it with hugo server --disableFastRender. Build details in my post How to create a Hugo-scroll website Check locally the changes on http://localhost:1313/ or alike Open the browser console. Refresh the page. Check if any error is loaded. It should just show MathJax is initializing... and MathJax typesetting complete Run console.log(&#39;MathJax version:&#39;, MathJax.version). Expected output: 4.0.0 Block equations Long one line equations, like this ($$S^{(3)} = 2\pi k\sqrt{\alpha}N_1^{TL} &#43; N_3^{(3,1)} \left[-3k\text{arcsinh} \left(\frac{1}{\sqrt{3}\sqrt{4\alpha&#43;1}} \righ...), see, expand beyond the Hugo screen. Though they are visible. Therefore, one needs newlines for block equations.">
-  <meta itemprop="wordCount" content="1778">
+  <meta itemprop="wordCount" content="1830">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -818,7 +818,9 @@ Let&rsquo;s apply this fix permanently and programmatically in next section.</p>
 </span></span><span style="display:flex;"><span>  <span style="color:#75715e">// Wait for TikZJax to finish rendering
 </span></span></span><span style="display:flex;"><span><span style="color:#75715e"></span>  <span style="color:#a6e22e">setTimeout</span>(<span style="color:#a6e22e">processTikzNodes</span>, <span style="color:#a6e22e">TIKZJAX_FIX_CONFIG</span>.<span style="color:#a6e22e">TIMEOUT_MS</span>);
 </span></span><span style="display:flex;"><span>});
-</span></span></code></pre></div><ol start="3">
+</span></span></code></pre></div><p>Actually I set a intial delay bigger than 3 secs, and with retries.
+Check the <a href="https://github.com/juanMarinero/juanmarinero.github.io/blob/main/assets/js/tikzjax-node.js">script</a>.</p>
+<ol start="3">
 <li><code>$EDITOR layouts/partials/custom_head.html</code> and append</li>
 </ol>
 <pre tabindex="0"><code>&lt;!-- TikZJax-node --&gt;
@@ -844,7 +846,10 @@ Let&rsquo;s apply this fix permanently and programmatically in next section.</p>
 </div>
 
 
-<p>The star is now <strong>right colored</strong>!</p>
+<p>The star is now <strong>right colored</strong>!
+If not, then the drawing took too long to be rendered, thus <code>assets/js/tikzjax-node.js</code> found nothing to fix.
+Just refresh the page without clearing the cache memory (<code>F5</code>).
+Remember this is a <em>workaround</em>, not an official patch.</p>
 <p>We can even draw multiple $\text{Ti}\textit{k}\text{Z}$ nodes in the same <code>&lt;div&gt;</code>:</p>
 
 
@@ -927,7 +932,7 @@ Let&rsquo;s apply this fix permanently and programmatically in next section.</p>
       \filldraw[black] (0,0) circle (2pt) node[anchor=west] {Some \LaTeX\, text};
 
       % Define nodes with styles
-      \node[circle, draw=green!60, fill=green!5, very thick, minimum size=7mm] (A) at (6,0) {A};
+      \node[circle, draw=green!60, fill=green!5, very thick, minimum size=7mm] (A) at (5,0) {A};
       \node[rectangle, draw=red!60, fill=red!5, very thick, minimum size=5mm, right=2cm of A] (B) {B};
 
       % Draw arrow between nodes
